add video cover download add mv2 support

--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,15 @@
 {
   "name": "rua豹器",
-  "manifest_version": 3,
+  "manifest_version": 2,
   "version": "5.10",
-  "description": "rua!",
-  "declarative_net_request": {
-    "rule_resources": [{
-      "id": "cookieOmit",
-      "enabled": false,
-      "path": "ruleSet/cookieOmit.json"
-    },{
-      "id": "redirect",
-      "enabled": false,
-      "path": "ruleSet/redirect.json"
-    },{
-      "id": "addSource",
-      "enabled": true,
-      "path": "ruleSet/addSource.json"
-    },{
-      "id": "danmakuSource",
-      "enabled": true,
-      "path": "ruleSet/danmakuSource.json"
-    }]
-  },
-  "permissions": ["alarms", "cookies", "contextMenus", "storage", "notifications", "declarativeNetRequest", "declarativeNetRequestFeedback"],
-  "action": {
+  "browser_action": {
     "default_popup": "popup.html"
   },
+  "description": "rua!",
+  "permissions": ["cookies","contextMenus","storage","notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/*", "https://www.bilibili.com/*", "https://*.hdslb.com/*", "https://api.vc.bilibili.com/", "https://tyrael-lee.gitee.io/", "https://tyraeldlee.github.io/", "*://*.bilivideo.com/", "*://*.bilivideo.cn/", "*://*.akamaized.net/"],
   "background": {
-    "service_worker": "js/sw.min.js"
+    "scripts": ["js/background.min.js"],
+    "persistent": true
   },
   "icons": {
     "16": "images/haruka16.png",
@@ -60,6 +42,11 @@
     "run_at": "document_end"
   },{
     "all_frames": true,
+    "js": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js"],
+    "matches": [ "*://live.bilibili.com/*", "*://live.bilibili.com/record/*","*://live.bilibili.com/blanc/*?liteVersion=true"],
+    "run_at": "document_end"
+  },{
+    "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css", "css/tips.min.css"],
     "js": ["js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/*", "*://live.bilibili.com/record/*","*://live.bilibili.com/blanc/*?liteVersion=true"],
@@ -68,8 +55,8 @@
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css", "css/videos.min.css"],
-    "js": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js","js/protobuf.min.js","js/ADT.js", "js/DanmakuToAss.min.js", "js/VideoHost.min.js"],
-    "matches": ["*://www.bilibili.com/video/*", "*://www.bilibili.com/bangumi/play/*"],
+    "js": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js","js/protobuf.js", "js/ADT.js", "js/DanmakuToAss.min.js", "js/VideoHost.min.js"],
+    "matches": ["*://www.bilibili.com/video/*"],
     "run_at": "document_end"
   },{
     "all_frames": true,
@@ -84,21 +71,6 @@
     "matches": ["*://www.bilibili.com/audio/*"],
     "run_at": "document_end"
   }],
-  "web_accessible_resources": [{"resources": ["images/*", "css/*", "js/*", "ffmpeg/*"], "matches": ["https://*/*"]}],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
-  },
-  "host_permissions": [
-    "https://api.live.bilibili.com/*",
-    "https://api.bilibili.com/*",
-    "https://live.bilibili.com/",
-    "https://www.bilibili.com/",
-    "https://*.hdslb.com/*",
-    "https://api.vc.bilibili.com/",
-    "https://tyrael-lee.gitee.io/",
-    "https://tyraeldlee.github.io/",
-    "*://*.bilivideo.com/",
-    "*://*.bilivideo.cn/",
-    "*://*.akamaized.net/"
-  ]
+  "web_accessible_resources": ["images/*", "css/*", "js/*", "ffmpeg/*"],
+  "content_security_policy": "script-src 'self' https://api.live.bilibili.com; object-src 'self'"
 }
