--- a/manifestv2.json
+++ b/manifestv2.json
@@ -25,19 +25,19 @@
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css"],
-    "js": ["js/ADT.js","js/haruka.js","js/WebHost.min.js"],
+    "js": ["js/ADT.min.js","js/haruka.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/21652717*", "*://live.bilibili.com/record/21652717*", "*://live.bilibili.com/blanc/21652717?liteVersion=true"],
     "run_at": "document_end"
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css"],
-    "js": ["js/ADT.js","js/pudding.js","js/WebHost.min.js"],
+    "js": ["js/ADT.min.js","js/pudding.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/21413565*", "*://live.bilibili.com/record/21413565*","*://live.bilibili.com/blanc/21413565?liteVersion=true"],
     "run_at": "document_end"
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css"],
-    "js": ["js/ADT.js","js/seki.js","js/WebHost.min.js"],
+    "js": ["js/ADT.min.js","js/seki.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/1603600*", "*://live.bilibili.com/record/1603600*","*://live.bilibili.com/blanc/1603600?liteVersion=true"],
     "run_at": "document_end"
   },{
@@ -55,7 +55,7 @@
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css", "css/videos.min.css"],
-    "js": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js","js/protobuf.js", "js/ADT.js", "js/DanmakuToAss.min.js", "js/VideoHost.min.js"],
+    "js": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js","js/protobuf.min.js", "js/ADT.min.js", "js/DanmakuToAss.min.js", "js/VideoHost.min.js"],
     "matches": ["*://www.bilibili.com/video/*"],
     "run_at": "document_end"
   },{
