--- a/manifest.json
+++ b/manifest.json
@@ -92,7 +92,7 @@
   },{
     "all_frames": true,
     "css": ["css/comment.min.css"],
-    "js": ["js/comment.js"],
+    "js": ["js/comment.min.js"],
     "matches": ["*://*.bilibili.com/*"],
     "exclude_matches": ["*://message.bilibili.com/*"],
     "run_at": "document_end"
