--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "rua豹器",
   "manifest_version": 3,
-  "version": "5.20",
+  "version": "5.21",
   "description": "rua!",
   "declarative_net_request": {
     "rule_resources": [{
@@ -31,7 +31,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "js/sw.min.js"
+    "service_worker": "js/sw.js"
   },
   "icons": {
     "16": "images/haruka16.png",
