--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "js/sw.js"
+    "service_worker": "js/sw.min.js"
   },
   "icons": {
     "16": "images/haruka16.png",
@@ -85,7 +85,7 @@
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css", "css/videos.min.css"],
-    "js": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js","js/protobuf.min.js","js/ADT.min.js", "js/DanmakuToAss.min.js", "js/VideoHost.js"],
+    "js": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js","js/protobuf.min.js","js/ADT.min.js", "js/DanmakuToAss.min.js", "js/VideoHost.min.js"],
     "matches": ["*://www.bilibili.com/video/*", "*://www.bilibili.com/bangumi/play/*" ,"*://www.bilibili.com/festival*"],
     "run_at": "document_end"
   },{
